Enable multi-user on tank.
Needed to support restricted profiles. This flag will need to move to a
more generic ATV location once we have verified it on fugu.

b/17394056 | Restricted profile doesn't work on Fugu

Change-Id: I1a4e666dddeeb455a5bc6da37874e5061ef17e2f

--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -111,4 +111,10 @@
     <!-- Apps that are authorized to access shared accounts -->
     <string name="config_appsAuthorizedForSharedAccounts">;com.android.tv.settings;</string>
 
+
+    <!-- Enable multi-user in order to get restricted profile support. -->
+    <!-- TODO: move this to a more generic place once we have verified it. -->
+    <bool name="config_enableMultiUserUI">true</bool>
+    <integer name="config_multiuserMaximumUsers">2</integer>
+
 </resources>
