Make sure settings always has access to the account
b/17491972 [Restricted profile] Selecting Settings>Storage&Reset crashes

Change-Id: I24af266bf1c64bd66a0564ad86fe9884450534e0

--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -108,4 +108,7 @@
     off until the normal polling interval. A value < 0 indicates infinite. -->
     <integer name="config_ntpRetry">-1</integer>
 
+    <!-- Apps that are authorized to access shared accounts -->
+    <string name="config_appsAuthorizedForSharedAccounts">;com.android.tv.settings;</string>
+
 </resources>
