overlay: Include the non-tv specific overlays from device/google/atv
Since we are calling a full build rather than the atv_base we need to
add some of the overlays such as data_only, no touch, etc

Change-Id: I90fc9e333dc0c7b7fcfa271939e0a3d5dd54b971

--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -96,4 +96,12 @@
     <!-- Wifi background scan support -->
     <bool name="config_wifi_background_scan_support">true</bool>
 
+    <!-- non-tv specific overlays -->
+    <integer name="config_deviceHardwareKeys">0</integer>
+    <integer name="config_deviceHardwareWakeKeys">0</integer>
+    <bool name="config_voice_capable">false</bool>
+    <bool name="config_sms_capable">false</bool>
+    <bool name="config_hasPermanentDpad">true</bool>
+    <bool name="config_defaultInTouchMode">false</bool>
+
 </resources>
