Display: Set config_dreamsActivatedOnSleepByDefault
This will prevent the display from going to sleep when waking from
a dream.

Change-Id: I33c0de7630bc870c9bbae8b666b60976b90bc0ab

--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -130,4 +130,7 @@
     <!-- Don't allow volume change on the device. -->
     <bool name="config_useFixedVolume">true</bool>
 
+    <!-- If supported and enabled, are dreams activated when asleep and charging? (by default) -->
+    <bool name="config_dreamsActivatedOnSleepByDefault">true</bool>
+
 </resources>
