--- a/overlay/frameworks/base/core/res/res/xml/storage_list.xml
+++ b/overlay/frameworks/base/core/res/res/xml/storage_list.xml
@@ -48,7 +48,7 @@
              android:allowMassStorage="false" />
 
     <!-- external USB OTG storage -->
-    <storage android:mountPoint="/storage/usbdisk"
+    <storage android:mountPoint="/storage/usbotg"
              android:storageDescription="@string/storage_usb"
              android:primary="false"
              android:removable="true"
