tank: overlay block orientation

--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -49,4 +49,9 @@
     <bool name="config_hasPermanentDpad">true</bool>
 
     <bool name="config_defaultInTouchMode">false</bool>
+
+    <bool name="config_supportAutoRotation">false</bool>
+    <bool name="config_forceDefaultOrientation">true</bool>
+
+
 </resources>
