--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -17,9 +17,9 @@
 <resources>
 
     <!-- Flag indicating that the media framework should allow changing
-         master volume stream and nothing else . -->
+         master volume stream and nothing else . ->
     <bool name="config_useMasterVolume">true</bool>
-
+    -->
     <!-- Flag indicating that the media framework should support playing of sounds on volume
          key usage.  This adds noticeable additional overhead to volume key processing, so
          is disableable for products for which it is irrelevant. -->
