--- a/overlay/frameworks/base/packages/SettingsProvider/res/values/defaults.xml
+++ b/overlay/frameworks/base/packages/SettingsProvider/res/values/defaults.xml
@@ -20,6 +20,7 @@
     <integer name="def_screen_off_timeout">900000</integer>
     <bool name="def_bluetooth_on">true</bool>
     <bool name="def_wifi_on">true</bool>
+    <bool name="def_lockscreen_disabled">true</bool>
 
 </resources>
 
