--- a/overlay/packages/apps/TvSettings/Settings/res/values/cm_strings.xml
+++ b/overlay/packages/apps/TvSettings/Settings/res/values/cm_strings.xml
@@ -12,5 +12,5 @@
      limitations under the License.
 -->
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
-<string name="accessories_add_bluetooth_inst_cm">Put your device in pairing mode. For Amazon Fire TV Remote press home 10 seconds or more, for Amazon Fire TV Remote with Alexa press home until the remote gets paired.</string>
+<string name="accessories_add_bluetooth_inst_cm">Put your device in pairing mode. For Amazon Fire TV Remote press home 10 seconds or more until you see it in the screen. Amazon Fire TV Remotes that use Wi-Fi Direct are not currently supported.</string>
 </resources>
