--- a/overlay/frameworks/base/packages/SettingsProvider/res/values/defaults.xml
+++ b/overlay/frameworks/base/packages/SettingsProvider/res/values/defaults.xml
@@ -20,7 +20,8 @@
     <integer name="def_screen_off_timeout">900000</integer>
     <bool name="def_bluetooth_on">true</bool>
     <bool name="def_wifi_on">true</bool>
-    <bool name="def_lockscreen_disabled">true</bool>
+    <bool name="def_backup_enabled">false</bool>
+    <string name="def_backup_transport">com.google.android.backup/.BackupTransportService</string>
 
     <!-- non-tv specific overlays -->
     <bool name="def_accelerometer_rotation">false</bool>
